--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@schematics/angular": "^9.1.0",
+    "angular-datatables": "^15.0.1",
     "bootstrap": "^5.2.3",
+    "datatables.net": "^1.13.4",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.13.4",
+    "jquery": "^3.6.4",
     "ngx-bootstrap": "^10.2.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
@@ -29,7 +35,9 @@
     "@angular-devkit/build-angular": "^15.2.0",
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
